--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,14 +1,11 @@
-form action="/pirates" method="post">
-   <h2>Pirate</h2>
-   <p>Name: <input type="text" name="pirate[name]"></p>
-   <p>Height: <input type="text" name="pirate[height]"></p>
-   <p>Weight: <input type="text" name="pirate[weight]"></p>
-   <h2>Ships</h2>
-   <p>Name: <input type="text" name="pirate[ships][][name]" id="ship_name_1"></p>
-   <p>Type: <input type="text" name="pirate[ships][][type]" id="ship_type_1"></p>
-   <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_1"></p>
-   <p>Name: <input type="text" name="pirate[ships][][name]"id="ship_name_2"></p>
-   <p>Type: <input type="text" name="pirate[ships][][type]"id="ship_type_2"></p>
-   <p>Booty: <input type="text" name="pirate[ships][][booty]" id="ship_booty_2"></p>
-   <input type="submit" name= "Submit" id= "Submit">
- </form>
+<h1>Pirate</h1>
+   <p>Name: <%=@pirate.name%></p>
+   <p>Weight: <%=@pirate.weight%></p>
+   <p>Height: <%=@pirate.height%></p>
+
+   <h1>Ships</h1>
+   <%@ships.each do |ship|%>
+     <p>Name: <%=ship.name%></p>
+     <p>Type: <%=ship.type%></p>
+     <p>Booty: <%=ship.booty%></p>
+   <%end%>
