--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,11 +1,4 @@
-<h1>Pirate</h1>
-   <p>Name: <%=@pirate.name%></p>
-   <p>Weight: <%=@pirate.weight%></p>
-   <p>Height: <%=@pirate.height%></p>
-
-   <h1>Ships</h1>
-   <%@ships.each do |ship|%>
-     <p>Name: <%=ship.name%></p>
-     <p>Type: <%=ship.type%></p>
-     <p>Booty: <%=ship.booty%></p>
-   <%end%>
+<h1><%= "#{@pirate.name}, #{@pirate.height}, #{@pirate.weight}" %></h1>
+<% Ship.all.each do |ship| %>
+ <h2><%=  "#{ship.name}, #{ship.type}, #{ship.booty}"%></h2>
+ <% end %>
