--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
  <html>
- <h1>Welcome to the Nested Forms Lab!</h1>
- <form method="post" action="/pirates">
- <p><label>Pirate Name:<input type="text" name="pirate[name]"> </label></p>
- <p><label>Pirate Height:<input type="text" name="pirate[height]"> </label></p>
- <p><label>Pirate Weight:<input type="text" name="pirate[weight]"> </label></p>
- <p><label>First Ship Name:<input type="text" id="ship_name_1" name="pirate[ships][][name]"> </label></p>
- <p><label>First Ship Type:<input type="text" id="ship_type_1" name="pirate[ships][][type]"> </label></p>
- <p><label>First Ship Booty:<input type="text" id="ship_booty_1" name="pirate[ships][][booty]"> </label></p>
- <p><label>Second Ship Name:<input type="text" id="ship_name_2" name="pirate[ships][][name]"> </label></p>
- <p><label>Second Ship Type:<input type="text" id="ship_type_2" name="pirate[ships][][type]"> </label></p>
- <p><label>Second Ship Booty:<input type="text" id="ship_booty_2" name="pirate[ships][][booty]"> </label></p>
- <input id="Submit" type="submit">
-
- </form>
- </html>
+ <head>
+     <meta charset="UTF-8">
+     <title>Add A Pirate</title>
+ <head>
+ <body>
+     <h1>Make your form here</h1>
+     <form method="POST" action="/pirates">
+     <p>Pirate Name: <input type="text" name="pirate[name]"></p>
+     <p>Pirate Weight: <input type="text" name="pirate[weight]"></p>
+     <p>Pirate Height: <input type="text" name="pirate[height]"></p>
+     <p>Ship Name: <input type="text" id = "ship_name_1" name="pirate[ships][][name]"></p>
+     <p>Ship Type: <input type="text" id = "ship_type_1" name="pirate[ships][][type]"></p>
+     <p>Ship Booty: <input type="text" id = "ship_booty_1" name="pirate[ships][][booty]"></p>
+     <p>Ship Name: <input type="text" id = "ship_name_2" name="pirate[ships][][name]"></p>    
+     <p>Ship Type: <input type="text" id = "ship_type_2" name="pirate[ships][][type]"></p>
+     <p>Ship Booty: <input type="text" id = "ship_booty_2" name="pirate[ships][][booty]"></p>
+     <p><input type="submit" value="Submit">
+     </form>
+ </body>
+ </html> 
