--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,4 +1,19 @@
-<h1><%= "#{@pirate.name}, #{@pirate.height}, #{@pirate.weight}" %></h1>
-<% Ship.all.each do |ship| %>
- <h2><%=  "#{ship.name}, #{ship.type}, #{ship.booty}"%></h2>
- <% end %>
+<!DOCTYPE html>
+ <html>
+     <head>
+         <meta charset="UTF-8">
+         <title>Display Pirates and their Ships</title>
+     <head>
+     <body>
+         <h1>Pirate Info:</h1>
+         <p>Pirate Name: <%= @pirate.name %></p>
+         <p>Pirate Height: <%= @pirate.height %></p>
+         <p>Pirate Weight: <%= @pirate.weight %></p>
+         <h2>Ship Info</h2>
+         <% @ships.each do |ship| %>
+             <p>Ship Name: <%= ship.name %></p>
+             <p>Ship Type: <%= ship.type %></p>
+             <p>Ship Booty: <%= ship.booty %></p>
+         <% end %>
+     </body>
+ </html> 
